--- a/results.ipynb
+++ b/results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -149,13 +149,14 @@
        "4             2.551007  0.087993      1.294  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv(\"results.csv\")\n",
+    "len_df = len(df)\n",
     "df.head()"
    ]
   },
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -192,6 +193,7 @@
     "plt.legend(fontsize=12, loc='upper right')\n",
     "\n",
     "plt.grid(True, which='both', linestyle='--', linewidth=0.5)\n",
+    "plt.savefig(f\"total_time{len_df}.png\")\n",
     "plt.show()"
    ]
   },
@@ -204,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -224,21 +226,19 @@
     "plt.plot(df['solution_time_sim'], label='solution_time_sim', marker='o', linestyle='-', linewidth=2, color=sns.color_palette(\"tab10\")[5])\n",
     "plt.plot(df['solution_time_real'], label='solution_time_real', marker='x', linestyle='--', linewidth=2, color=sns.color_palette(\"tab10\")[2])\n",
     "\n",
-    "# Title and labels with improved font size\n",
     "plt.title('Comparison of Solution calculation time: Init to Pregrasp', fontsize=16, fontweight='bold')\n",
     "plt.xlabel('Iteration', fontsize=14)\n",
     "plt.ylabel('Sim seconds', fontsize=14)\n",
     "\n",
-    "# Legend with improved location and font size\n",
     "plt.legend(fontsize=12, loc='upper right')\n",
     "\n",
-    "# Show grid with improved style\n",
-    "plt.grid(True, which='both', linestyle='--', linewidth=0.5)"
+    "plt.grid(True, which='both', linestyle='--', linewidth=0.5)\n",
+    "plt.savefig(f\"solution_time_sim_real{len_df}.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
     "plt.legend(fontsize=12, loc='upper right')\n",
     "\n",
     "plt.grid(True, which='both', linestyle='--', linewidth=0.5)\n",
-    "plt.show()"
+    "plt.savefig(f\"solution_time_offset{len_df}.png\")"
    ]
   },
   {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -299,12 +299,13 @@
     "\n",
     "plt.legend(fontsize=12, loc='upper right')\n",
     "\n",
-    "plt.grid(True, which='both', linestyle='--', linewidth=0.5)"
+    "plt.grid(True, which='both', linestyle='--', linewidth=0.5)\n",
+    "plt.savefig(f\"grasp_pose_estimate_time{len_df}.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +329,7 @@
     "plt.legend(fontsize=12, loc='upper right')\n",
     "\n",
     "plt.grid(True, which='both', linestyle='--', linewidth=0.5)\n",
-    "plt.show()"
+    "plt.savefig(f\"offset{len_df}.png\")"
    ]
   },
   {
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -364,12 +365,12 @@
     "plt.legend(fontsize=12, loc='upper right')\n",
     "\n",
     "plt.grid(True, which='both', linestyle='--', linewidth=0.5)\n",
-    "plt.show()"
+    "plt.savefig(f\"grip_time{len_df}.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +399,7 @@
     ")\n",
     "plt.title('Count of Success vs Fail Iterations', fontsize=16, fontweight='bold')\n",
     "plt.axis('equal')  # Equal aspect ratio ensures that pie chart is circular.\n",
-    "plt.show()"
+    "plt.savefig(f\"success_fail{len_df}.png\")"
    ]
   },
   {
