--- a/results.ipynb
+++ b/results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "4             2.551007  0.087993      1.294  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
     "plt.legend(fontsize=12, loc='upper right')\n",
     "\n",
     "plt.grid(True, which='both', linestyle='--', linewidth=0.5)\n",
-    "plt.savefig(f\"total_time{len_df}.png\")\n",
+    "plt.savefig(f\"./viz_results/total_time{len_df}.png\")\n",
     "plt.show()"
    ]
   },
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -233,12 +233,12 @@
     "plt.legend(fontsize=12, loc='upper right')\n",
     "\n",
     "plt.grid(True, which='both', linestyle='--', linewidth=0.5)\n",
-    "plt.savefig(f\"solution_time_sim_real{len_df}.png\")"
+    "plt.savefig(f\"./viz_results/solution_time_sim_real{len_df}.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
     "plt.legend(fontsize=12, loc='upper right')\n",
     "\n",
     "plt.grid(True, which='both', linestyle='--', linewidth=0.5)\n",
-    "plt.savefig(f\"solution_time_offset{len_df}.png\")"
+    "plt.savefig(f\"./viz_results/solution_time_offset{len_df}.png\")"
    ]
   },
   {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -300,12 +300,12 @@
     "plt.legend(fontsize=12, loc='upper right')\n",
     "\n",
     "plt.grid(True, which='both', linestyle='--', linewidth=0.5)\n",
-    "plt.savefig(f\"grasp_pose_estimate_time{len_df}.png\")"
+    "plt.savefig(f\"./viz_results/grasp_pose_estimate_time{len_df}.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
     "plt.legend(fontsize=12, loc='upper right')\n",
     "\n",
     "plt.grid(True, which='both', linestyle='--', linewidth=0.5)\n",
-    "plt.savefig(f\"offset{len_df}.png\")"
+    "plt.savefig(f\"./viz_results/offset{len_df}.png\")"
    ]
   },
   {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -365,12 +365,12 @@
     "plt.legend(fontsize=12, loc='upper right')\n",
     "\n",
     "plt.grid(True, which='both', linestyle='--', linewidth=0.5)\n",
-    "plt.savefig(f\"grip_time{len_df}.png\")"
+    "plt.savefig(f\"./viz_results/grip_time{len_df}.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
     ")\n",
     "plt.title('Count of Success vs Fail Iterations', fontsize=16, fontweight='bold')\n",
     "plt.axis('equal')  # Equal aspect ratio ensures that pie chart is circular.\n",
-    "plt.savefig(f\"success_fail{len_df}.png\")"
+    "plt.savefig(f\"./viz_results/success_fail{len_df}.png\")"
    ]
   },
   {
